--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,8 @@ body {
     position: relative;
     display: inline;
     float: left;
-    width: calc(100% - 400px);
+    width: calc(100% - 440px);
+    padding: 20px;
 }
 
 .xsy {
@@ -27,4 +28,8 @@ body {
 .title {
     text-transform: uppercase;
     color: #73bde7;
+}
+
+.input-wrapper input {
+    background-image: none;
 }
