--- a/css/main.css
+++ b/css/main.css
@@ -48,23 +48,27 @@ h2 {
     font-weight: 200;
 }
 
-.canvas {
-    background: #fff;
+.display {
     width: 400px;
-    height: 400px;
-    border-radius: 50%;
     position: relative;
     display: inline;
-    float: left;
-    overflow: hidden;
+    float: left;    
 }
 
-.xsy-editor {
+.interface {
     position: relative;
     display: inline;
     float: left;
     width: calc(100% - 440px);
     padding: 20px;
+}
+
+.canvas {
+    background: #fff;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .xsy {
